syntax = "proto3";

package chat;

option go_package = "github.com/Hwisaek/go-grpc/chat";

service Chat {
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
  rpc GetMessage(GetMessagesRequest) returns (GetMessagesResponse);
}

message SendMessageRequest {
  Message message = 1;
}

message SendMessageResponse {}

message GetMessagesRequest{}

message GetMessagesResponse {
  repeated Message messages = 1;
}

message Message {
  string name = 1;
  string text = 2;
}
